[gd_scene load_steps=2 format=3 uid="uid://dhihlpbwmmhuw"]

[ext_resource type="Script" uid="uid://4q6a76cu23rw" path="res://ui/hub/password_change_window.gd" id="1_4q6a7"]

[node name="PasswordChangeWindow" type="Window"]
title = "Cambiar Contrase√±a"
position = Vector2i(0, 36)
size = Vector2i(590, 185)
unresizable = true
script = ExtResource("1_4q6a7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -9.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="FormContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="CurrentPasswordLabel" type="Label" parent="VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Contrase√±a Actual:"

[node name="CurrentPasswordInput" type="LineEdit" parent="VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Ingrese su contrase√±a actual"
secret = true

[node name="CurrentPasswordToggle" type="Button" parent="VBoxContainer/FormContainer"]
layout_mode = 2
text = "üëÅ"

[node name="NewPasswordLabel" type="Label" parent="VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Nueva Contrase√±a:"

[node name="NewPasswordInput" type="LineEdit" parent="VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Ingrese la nueva contrase√±a"
secret = true

[node name="NewPasswordToggle" type="Button" parent="VBoxContainer/FormContainer"]
layout_mode = 2
text = "üëÅ"

[node name="ConfirmPasswordLabel" type="Label" parent="VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Confirmar Contrase√±a:"

[node name="ConfirmPasswordInput" type="LineEdit" parent="VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Confirme la nueva contrase√±a"
secret = true

[node name="ConfirmPasswordToggle" type="Button" parent="VBoxContainer/FormContainer"]
layout_mode = 2
text = "üëÅ"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CANCELAR"

[node name="AcceptButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CAMBIAR"
